--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,9 @@ docxcompose==1.4.0
 docxtpl==0.17.0
 Flask==3.0.3
 Flask-Login==0.6.3
+flask-simple-captcha==5.5.5
 Flask-SQLAlchemy==3.1.1
-greenlet==0.4.13
+greenlet==3.1.0
 hpy==0.9.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
@@ -15,6 +16,9 @@ lxml==5.2.1
 MarkupSafe==2.1.5
 numpy==1.26.4
 pandas==2.2.2
+pillow==10.4.0
+pycparser==2.22
+PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 pytz==2024.1
